--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <hr size="2">
   <table cellspacing="30">
     <tr>
-      <td><img src="D:\F_S_W_D\circle crop image.png" alt="Abhi" width="150" height="150"  ></td>
+      <td><img src="D:\F_S_W_D\Images\circle crop image.png" alt="Abhi" width="150" height="150"  ></td>
       <td> <h1>Kavyabhishek</h1> 
         <p><strong></strong></p> 
         <a href="https://github.com/KAVYABHISHEK">Git hub</a>
@@ -74,6 +74,6 @@
     I bear responsibility for any anomalies concerning the above information"</p>
     <hr>
     <h3>Signature</h3>
-    <img src="D:\F_S_W_D\signature.png" width="150" height="100" >
+    <img src="D:\F_S_W_D\Images\signature.png" width="150" height="100" >
 </body>
 </html>
